--- a/Dockerfile.master
+++ b/Dockerfile.master
@@ -36,7 +36,7 @@ RUN echo "PS1='\[\033[01;32m\]\u@salt-master\[\033[00m\]:\[\033[01;34m\]\w\[\033
 # Add supervisord configuration
 RUN apt-get install supervisor -y
 RUN apt-get clean all
-COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY master-supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # Start supervisord
 ENTRYPOINT ["/usr/bin/supervisord"]
